--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -6,72 +6,11 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:padding="16dp"
+    android:gravity="center"
     android:orientation="vertical"
     tools:context=".CalendarActivity">
-    <TextView
-        android:id="@+id/tvTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Marque os dias concluídos"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:layout_gravity="center_horizontal" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center">
 
-        <Button
-            android:id="@+id/btnSunday"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="D" />
 
-        <Button
-            android:id="@+id/btnMonday"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="S" />
-
-        <Button
-            android:id="@+id/btnTuesday"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="T" />
-
-        <Button
-            android:id="@+id/btnWednesday"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Q" />
-
-        <Button
-            android:id="@+id/btnThursday"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Q" />
-
-        <Button
-            android:id="@+id/btnFriday"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="S" />
-
-        <Button
-            android:id="@+id/btnSaturday"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="S" />
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/btnViewCalendar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Ver Calendário"
-        android:layout_marginTop="16dp" />
 </LinearLayout>
-
 
